<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="10dp"
    android:background="#ededed"
    android:orientation="vertical"
    tools:context=".activity.LogWorkActivity">

    <TextView
        android:id="@+id/start_date_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_date_btn"
        android:text="@string/start_date_lbl"
        android:textAlignment="center"
        android:textColor="@color/blue_grey_900"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_date_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/end_date_lbl"
        android:background="@color/deep_purple_900"
        android:onClick="selectDateTime"
        android:text="@string/set_start_date_btn"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/end_date_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/end_date_btn"
        android:text="@string/end_date_lbl"
        android:textAlignment="center"
        android:textColor="@color/blue_grey_700"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/end_date_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/time_worked_lbl"
        android:background="@color/deep_purple_900"
        android:onClick="selectDateTime"
        android:text="@string/set_end_date_btn"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/time_worked_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textAlignment="center"
        android:textColor="@color/amber_800"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/save_work_entry_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancel_work_entry_btn"
        android:background="@color/blue_grey_700"
        android:onClick="saveNewLogEntry"
        android:text="@string/save_btn"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/cancel_work_entry_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@color/red_700"
        android:onClick="clickedCancel"
        android:text="@string/cancel_btn"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>